--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@krestui/svelte-context-test",
   "license": "MIT",
   "repository": "git@github.com:krestui/svelte-context-test.git",
-  "version": "0.1.0",
+  "version": "0.3.1",
   "types": "package/index.d.ts",
   "author": "KrestUI",
   "keywords": [
@@ -24,15 +24,15 @@
     "format": "prettier --write --plugin-search-dir=. .",
     "test:watch": "npm run test -- --watch",
     "next": "yarn version patch --deferred && yarn version apply",
-    "pub": "yarn check && yarn lint && yarn prepare && cd package && touch yarn.lock &&  yarn && yarn npm publish --tolerate-republish"
+    "pub": "yarn check && yarn lint && yarn prepare && cd package && npm publish --tolerate-republish"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^1.0.0-next.377",
+    "@sveltejs/kit": "^1.0.0-next.379",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "3.1.3",
     "@types/jest": "^28.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
